played around with onscroll. Working but not currently being usefull

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>hello squirreled</h1>
-    
+    <script src="jquery.js"></script>
     <script src="main.js" async defer></script>
+    <img id="my-face" src="https://media-exp1.licdn.com/dms/image/C4E03AQFobBC2gEBq_w/profile-displayphoto-shrink_200_200/0?e=1588809600&v=beta&t=OIWcmWnEQBcYYuXb6RtgGVtzvC6PQX8yjd5nt0Yofj0" alt="My Face">
+    <h1 id="top-name">Jonathan Reckinger</h1>
+
+    <h2>Skills</h2>
+    
   </body>
 </html>
